base/global/catch-all-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-default-backend
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-default-backend
  template:
    metadata:
      labels:
        app: custom-default-backend
    spec:
      containers:
        - name: default-backend
          image: nginx:alpine
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: custom-404-html
---
apiVersion: v1
kind: Service
metadata:
  name: custom-default-backend
  namespace: ingress-nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: custom-default-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catch-all-ingress
  namespace: ingress-nginx
spec:
  tls:
    - hosts:
        - "*.replace-me"
      secretName: domain-zbm001-cert
  rules:
    - host: "replace-me"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: custom-default-backend
                port:
                  number: 80
